--- a/recruiter-server/views/layout/header.ejs
+++ b/recruiter-server/views/layout/header.ejs
@@ -47,10 +47,10 @@
           <h2 class="text-2xl font-bold text-white"><span style="color: #dfcc24;">Go</span>Hire</h2>
         </div>
         <ul class="flex space-x-8">
-          <li><a href="/recruiter/home" class="hover:text-yellow-300 font-medium transition-colors duration-300">Home</a></li>
-          <li><a href="/recruiter/companies" class="hover:text-yellow-300 font-medium transition-colors duration-300">Companies</a></li>
-          <li><a href="/recruiter/jobs" class="hover:text-yellow-300 font-medium transition-colors duration-300">Jobs</a></li>
-          <li><a href="/recruiter/profile" class="hover:text-yellow-300 font-medium transition-colors duration-300">Profile</a></li>
+          <li><a href="/recruiter/home" class="hover:text-blue-900 font-medium transition-colors duration-300">Home</a></li>
+          <li><a href="/recruiter/companies" class="hover:text-blue-900 font-medium transition-colors duration-300">Companies</a></li>
+          <li><a href="/recruiter/jobs" class="hover:text-blue-900 font-medium transition-colors duration-300">Jobs</a></li>
+          <li><a href="/recruiter/profile" class="hover:text-blue-900 font-medium transition-colors duration-300">Profile</a></li>
         </ul>
       </nav>
     </div>
