--- a/applicant-server/views/Apply_for_Internships.ejs
+++ b/applicant-server/views/Apply_for_Internships.ejs
@@ -35,9 +35,32 @@
                     <li><a href="/contact"
                             class="hover:text-yellow-300 transition-colors duration-300 font-extrabold relative after:absolute after:bottom-0 after:left-0 after:h-0.5 after:w-0 after:bg-yellow-300 after:transition-all after:duration-300 hover:after:w-full">Contact
                             Us</a></li>
-                    <li><a href="/login"
-                            class="bg-yellow-400 hover:bg-yellow-500 text-blue-800 font-black py-2 px-6 rounded-full transition-all duration-300 hover:shadow-lg">Login</a>
-                    </li>
+                    <% if (user) { %>
+                        <li class="relative group">
+                            <button
+                                class="bg-yellow-400 hover:bg-yellow-500 text-blue-800 font-black py-2 px-6 rounded-full transition-all duration-300 hover:shadow-lg flex items-center">
+                                <%= user.firstName || 'Profile' %>
+                                    <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 ml-1" fill="none"
+                                        viewBox="0 0 24 24" stroke="currentColor">
+                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                            d="M19 9l-7 7-7-7" />
+                                    </svg>
+                            </button>
+                            <div
+                                class="absolute right-0 mt-2 w-48 bg-white rounded-lg shadow-lg opacity-0 invisible group-hover:opacity-100 group-hover:visible transition-all duration-300 z-50 transform -translate-y-2 group-hover:translate-y-0">
+                                <a href="/profile"
+                                    class="block px-4 py-2 text-blue-800 hover:bg-blue-50 rounded-t-lg">My
+                                    Profile</a>
+                                <a href="/logout"
+                                    class="block px-4 py-2 text-blue-800 hover:bg-blue-50 rounded-b-lg">Logout</a>
+                            </div>
+                        </li>
+                        <% } else { %>
+                            <li><a href="/login"
+                                    class="bg-yellow-400 hover:bg-yellow-500 text-blue-800 font-black py-2 px-6 rounded-full transition-all duration-300 hover:shadow-lg">Login</a>
+                            </li>
+                                     <% } %>
+
                 </ul>
 
 
@@ -45,7 +68,52 @@
                     <span class="block w-6 h-0.5 bg-white transition-all duration-300"></span>
                     <span class="block w-6 h-0.5 bg-white transition-all duration-300"></span>
                     <span class="block w-6 h-0.5 bg-white transition-all duration-300"></span>
+
+                    <ul id="dropdown-menu"
+                        class="absolute right-0 mt-4 w-140 bg-yellow-500 text-blue-500 rounded-lg shadow-lg hidden text-blue-800">
+                        <li><a href="/"
+                                class="block px-4 py-2 hover:bg-blue-500 hover:text-yellow-500 text-center">Home</a>
+                        </li>
+                        <li><a href="/jobs"
+                                class="block px-4 py-2 hover:bg-blue-500 hover:text-yellow-500 text-center">Jobs</a>
+                        </li>
+                        <li><a href="/internships"
+                                class="block px-4 py-2 hover:bg-blue-500 hover:text-yellow-500 text-center">Internships</a>
+                        </li>
+                        <li><a href="/contact"
+                                class="block px-4 py-2 hover:bg-blue-500 hover:text-yellow-500 text-center">Contact
+                                Us</a>
+                        </li>
+
+                        <% if (user) { %>
+                            <li class="relative group">
+                                <button
+                                    class="bg-yellow-400 hover:bg-blue-500 text-blue-800 font-black py-2 px-6 rounded-full transition-all duration-300 hover:shadow-lg flex items-center">
+                                    <%= user.firstName || 'Profile' %>
+                                        <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 ml-1" fill="none"
+                                            viewBox="0 0 24 24" stroke="currentColor">
+                                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                                d="M19 9l-7 7-7-7" />
+                                        </svg>
+                                </button>
+                                <div
+                                    class="absolute right-0 mt-2 w-48 bg-white rounded-lg shadow-lg opacity-0 invisible group-hover:opacity-100 group-hover:visible transition-all duration-300 z-50 transform -translate-y-2 group-hover:translate-y-0">
+                                    <a href="/profile"
+                                        class="block px-4 py-2 text-blue-800 hover:bg-blue-50 rounded-t-lg">My
+                                        Profile</a>
+                                    <a href="/logout"
+                                        class="block px-4 py-2 text-blue-800 hover:bg-blue-50 rounded-b-lg">Logout</a>
+                                </div>
+                            </li>
+                            <% } else { %>
+                                <li><a href="/login"
+                                        class="bg-yellow-400 hover:bg-yellow-500 text-blue-800 font-black py-2 px-6 rounded-full transition-all duration-300 hover:shadow-lg">Login</a>
+                                </li>
+                                         <% } %>
+                    </ul>
                 </div>
+
+
             </div>
         </nav>
 
