--- a/applicant-server/views/Apply_for_Internships.ejs
+++ b/applicant-server/views/Apply_for_Internships.ejs
@@ -1,40 +1,40 @@
 <%- include('layout/header.ejs') %>
 
-    <body class="bg-gray-100">
-        <nav class="bg-gradient-to-r from-blue-700 to-blue-500 p-5 shadow-xl fixed w-full z-10 transition-all duration-300 bg-blue-500"
-            id="navbar">
+    <body class="bg-gray-100 ">
+        <nav class="bg-blue-500 p-5 shadow-xl fixed w-full z-10 transition-all duration-300" id="navbar">
             <div class="container mx-auto flex justify-between items-center">
                 <a href="/"
                     class="text-black text-3xl font-bold transition-transform hover:scale-105 duration-300 ml-2">Go<span
                         class="text-yellow-400">Hire</span></a>
 
                 <div class="relative w-1/3 group">
-                    <form action="/search" method="POST" id="search-form"><input id="search-space" type="text"
-                            placeholder="Search for Opportunities" name="parsedValue"
+                    <form action="/search" method="POST" id="search-form">
+                        <input id="search-space" type="text" placeholder="Search for Opportunities" name="parsedValue"
                             class="w-full p-3 rounded-full border-2 border-blue-300 focus:outline-none focus:ring-2 focus:ring-yellow-400 transition-all duration-300 shadow-md placeholder:text-gray-700">
                     </form>
                     <div class="absolute right-3 top-3.5 text-yellow-500">
-                        <a href="/search" id="search-btn"><svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5"
-                                fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="4">
+                        <a href="/search" id="search-btn">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
+                                stroke="currentColor" stroke-width="4">
                                 <path stroke-linecap="round" stroke-linejoin="round"
                                     d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
-                            </svg></a>
+                            </svg>
+                        </a>
                     </div>
                 </div>
 
                 <ul class="hidden md:flex space-x-8 text-white">
-                    <li><a href="/"
-                            class="hover:text-yellow-300 transition-colors duration-300 font-extrabold relative after:absolute after:bottom-0 after:left-0 after:h-0.5 after:w-0 after:bg-yellow-300 after:transition-all after:duration-300 hover:after:w-full">Home</a>
+                    <li><a href="/" class="hover:text-yellow-300 transition-colors duration-300 font-extrabold">Home</a>
                     </li>
                     <li><a href="/jobs"
-                            class="hover:text-yellow-300 transition-colors duration-300 font-extrabold relative after:absolute after:bottom-0 after:left-0 after:h-0.5 after:w-0 after:bg-yellow-300 after:transition-all after:duration-300 hover:after:w-full">Jobs</a>
+                            class="hover:text-yellow-300 transition-colors duration-300 font-extrabold">Jobs</a>
                     </li>
                     <li><a href="/internships"
-                            class="hover:text-yellow-300 transition-colors duration-300 font-extrabold relative after:absolute after:bottom-0 after:left-0 after:h-0.5 after:w-0 after:bg-yellow-300 after:transition-all after:duration-300 hover:after:w-full">Internship</a>
+                            class="hover:text-yellow-300 transition-colors duration-300 font-extrabold">Internship</a>
                     </li>
                     <li><a href="/contact"
-                            class="hover:text-yellow-300 transition-colors duration-300 font-extrabold relative after:absolute after:bottom-0 after:left-0 after:h-0.5 after:w-0 after:bg-yellow-300 after:transition-all after:duration-300 hover:after:w-full">Contact
-                            Us</a></li>
+                            class="hover:text-yellow-300 transition-colors duration-300 font-extrabold">Contact Us</a>
+                    </li>
                     <% if (user) { %>
                         <li class="relative group">
                             <button
@@ -63,14 +63,14 @@
 
                 </ul>
 
-
-                <div class="md:hidden flex flex-col space-y-1 cursor-pointer" id="mobile-menu">
-                    <span class="block w-6 h-0.5 bg-white transition-all duration-300"></span>
-                    <span class="block w-6 h-0.5 bg-white transition-all duration-300"></span>
-                    <span class="block w-6 h-0.5 bg-white transition-all duration-300"></span>
-
+                <div class="md:hidden relative" id="mobile-menu-container">
+                    <div class="flex flex-col space-y-1 cursor-pointer" id="mobile-menu">
+                        <span class="block w-6 h-0.5 bg-white transition-all duration-300"></span>
+                        <span class="block w-6 h-0.5 bg-white transition-all duration-300"></span>
+                        <span class="block w-6 h-0.5 bg-white transition-all duration-300"></span>
+                    </div>
                     <ul id="dropdown-menu"
-                        class="absolute right-0 mt-4 w-140 bg-yellow-500 text-blue-500 rounded-lg shadow-lg hidden text-blue-800">
+                        class="absolute right-0 mt-10 w-140 bg-yellow-500 text-blue-500 rounded-lg shadow-lg hidden text-blue-800 flex justify-center flex-col">
                         <li><a href="/"
                                 class="block px-4 py-2 hover:bg-blue-500 hover:text-yellow-500 text-center">Home</a>
                         </li>
@@ -86,9 +86,9 @@
                         </li>
 
                         <% if (user) { %>
-                            <li class="relative group">
+                            <li class="relative group flex justify-center">
                                 <button
-                                    class="bg-yellow-400 hover:bg-blue-500 text-blue-800 font-black py-2 px-6 rounded-full transition-all duration-300 hover:shadow-lg flex items-center">
+                                    class="bg-yellow-400 hover:bg-blue-500 text-blue-800 font-black py-2 px-6 rounded-full transition-all duration-300 hover:shadow-lg flex justify-center">
                                     <%= user.firstName || 'Profile' %>
                                         <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 ml-1" fill="none"
                                             viewBox="0 0 24 24" stroke="currentColor">
@@ -97,7 +97,7 @@
                                         </svg>
                                 </button>
                                 <div
-                                    class="absolute right-0 mt-2 w-48 bg-white rounded-lg shadow-lg opacity-0 invisible group-hover:opacity-100 group-hover:visible transition-all duration-300 z-50 transform -translate-y-2 group-hover:translate-y-0">
+                                    class="absolute right-0 mt-2 w-48 bg-white rounded-lg shadow-lg opacity-0 invisible group-hover:opacity-100 group-hover:visible transition-all duration-300 z-50 transform -translate-y-2 group-hover:translate-y-0 flex justify-center flex-col">
                                     <a href="/profile"
                                         class="block px-4 py-2 text-blue-800 hover:bg-blue-50 rounded-t-lg">My
                                         Profile</a>
@@ -107,150 +107,50 @@
                             </li>
                             <% } else { %>
                                 <li><a href="/login"
-                                        class="bg-yellow-400 hover:bg-yellow-500 text-blue-800 font-black py-2 px-6 rounded-full transition-all duration-300 hover:shadow-lg">Login</a>
+                                        class="bg-yellow-400 hover:bg-yellow-500 text-blue-800 font-black py-2 px-6 rounded-full transition-all duration-300 hover:shadow-lg flex justify-center">Login</a>
                                 </li>
                                          <% } %>
                     </ul>
                 </div>
-
-
             </div>
         </nav>
+        <!-- Navbar can go here --> ">
+        <div class="container mx-auto p-4 mt-20 min-h-screen pt-20 ml-80">
 
-        <!-- Navbar can go here -->
-
-        <div class="container mx-auto px-4 py-8 max-w-4xl">
-            <div class="bg-white rounded-lg shadow-lg overflow-hidden">
-                <!-- Job Header -->
-                <div class="bg-gradient-to-r from-gray-800 to-gray-900 mt-25 pl-38 py-8">
-                    <h1 class="text-3xl font-bold">
-                        <span>SDE Intern </span>
-                        <span>opportunity</span>
-                        <span>at Coding Ninjas</span>
-                    </h1>
-                </div>
-
-                <!-- Job Details -->
-                <div class="p-6">
-                    <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
-                        <!-- Left Column -->
-                        <div class="space-y-4">
-                            <div class="flex items-center space-x-2">
-                                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-gray-500"
-                                    viewBox="0 0 20 20" fill="currentColor">
-                                    <path fill-rule="evenodd"
-                                        d="M5.05 4.05a7 7 0 119.9 9.9L10 18.9l-4.95-4.95a7 7 0 010-9.9zM10 11a2 2 0 100-4 2 2 0 000 4z"
-                                        clip-rule="evenodd" />
-                                </svg>
-                                <span>Gurgaon, India (On Site or Remote ) </span>
-                            </div>
-
-                            <div class="flex items-center space-x-2">
-                                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-gray-500"
-                                    viewBox="0 0 20 20" fill="currentColor">
-                                    <path fill-rule="evenodd"
-                                        d="M10 2a4 4 0 00-4 4v1H5a1 1 0 00-.994.89l-1 9A1 1 0 004 18h12a1 1 0 00.994-1.11l-1-9A1 1 0 0015 7h-1V6a4 4 0 00-4-4zm2 5V6a2 2 0 10-4 0v1h4zm-6 3a1 1 0 112 0 1 1 0 01-2 0zm7-1a1 1 0 100 2 1 1 0 000-2z"
-                                        clip-rule="evenodd" />
-                                </svg>
-                                <span>₹ 15-25kpm</span>
-                            </div>
-
-                            <div class="flex items-center space-x-2">
-                                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-gray-500"
-                                    viewBox="0 0 20 20" fill="currentColor">
-                                    <path fill-rule="evenodd"
-                                        d="M6 2a1 1 0 00-1 1v1H4a2 2 0 00-2 2v10a2 2 0 002 2h12a2 2 0 002-2V6a2 2 0 00-2-2h-1V3a1 1 0 10-2 0v1H7V3a1 1 0 00-1-1zm0 5a1 1 0 000 2h8a1 1 0 100-2H6z"
-                                        clip-rule="evenodd" />
-                                </svg>
-                                <span>Apply By 30 March 2025</span>
-                            </div>
-                        </div>
-
-                        <!-- Right Column -->
-                        <div class="space-y-4">
-                            <div class="flex items-center space-x-2">
-                                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-gray-500"
-                                    viewBox="0 0 20 20" fill="currentColor">
-                                    <path fill-rule="evenodd" d="M10 9a3 3 0 100-6 3 3 0 000 6zm-7 9a7 7 0 1114 0H3z"
-                                        clip-rule="evenodd" />
-                                </svg>
-                                <span>Number of openings 5</span>
-                            </div>
-
-                            <div class="flex items-center space-x-2">
-                                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-gray-500"
-                                    viewBox="0 0 20 20" fill="currentColor">
-                                    <path
-                                        d="M13 6a3 3 0 11-6 0 3 3 0 016 0zM18 8a2 2 0 11-4 0 2 2 0 014 0zM14 15a4 4 0 00-8 0v3h8v-3zM6 8a2 2 0 11-4 0 2 2 0 014 0zM16 18v-3a5.972 5.972 0 00-.75-2.906A3.005 3.005 0 0119 15v3h-3zM4.75 12.094A5.973 5.973 0 004 15v3H1v-3a3 3 0 013.75-2.906z" />
-                                </svg>
-                                <span class="text-pink-600">Applicants 1</span>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- Skills Required -->
-                    <div class="mt-8">
-                        <h3 class="text-lg font-semibold mb-3">Skills Required</h3>
-                        <div class="flex flex-wrap gap-2">
-                            <span class="px-3 py-1 bg-blue-900 text-white rounded-md text-sm">REACT</span>
-                            <span class="px-3 py-1 bg-blue-900 text-white rounded-md text-sm">NodeJS</span>
-                            <span class="px-3 py-1 bg-blue-900 text-white rounded-md text-sm">JS</span>
-                            <span class="px-3 py-1 bg-blue-900 text-white rounded-md text-sm">SQL</span>
-                            <span class="px-3 py-1 bg-blue-900 text-white rounded-md text-sm">MongoDB</span>
-                            <span class="px-3 py-1 bg-blue-900 text-white rounded-md text-sm">Express</span>
-                            <span class="px-3 py-1 bg-blue-900 text-white rounded-md text-sm">AWS</span>
-                        </div>
-                    </div>
-
-                    <!-- Job Description -->
-                    <div class="mt-8">
-                        <h3 class="text-lg font-semibold mb-3">Job Description</h3>
-                        <div class="prose max-w-none">
-                            <p class="mb-4">We are looking for a talented Software Development Engineer (SDE) with
-                                expertise in React, Node.js, and modern web technologies to join our team at Coding
-                                Ninjas.</p>
-
-                            <p class="mb-4">As an SDE at Coding Ninjas, you will:</p>
-                            <ul class="list-disc pl-5 mb-4">
-                                <li>Design and develop scalable web applications using React, Node.js, and related
-                                    technologies</li>
-                                <li>Work with MongoDB, SQL databases, and AWS services</li>
-                                <li>Collaborate with cross-functional teams to define, design, and ship new features
-                                </li>
-                                <li>Ensure the best performance, quality, and responsiveness of applications</li>
-                                <li>Identify and correct bottlenecks and fix bugs</li>
-                                <li>Help maintain code quality, organization, and automatization</li>
-                            </ul>
-
-                            <p class="mb-4">Requirements:</p>
-                            <ul class="list-disc pl-5 mb-4">
-                                <li>3+ years of experience with React.js and Node.js</li>
-                                <li>Strong proficiency in JavaScript, HTML, CSS</li>
-                                <li>Experience with MongoDB and SQL databases</li>
-                                <li>Familiarity with AWS services</li>
-                                <li>Experience with common front-end development tools</li>
-                                <li>Good understanding of asynchronous programming</li>
-                                <li>Familiarity with RESTful APIs and modern authorization mechanisms</li>
-                                <li>Experience with version control systems (e.g., Git)</li>
-                                <li>Strong problem-solving skills and attention to detail</li>
-                            </ul>
-
-                            <p>This is a remote opportunity with occasional visits to our Gurgaon office.</p>
-                        </div>
-                    </div>
-
-                    <!-- Apply Button -->
-                    <div class="mt-8 flex justify-center">
-                        <!-- on click of that btn i want to show a toaster msg in screen  -->
-                        <button id="applyButton"
-                            class="bg-blue-600 hover:bg-blue-700 text-white font-semibold py-3 px-8 rounded-md text-lg transition duration-300">
-                            Apply Now
-                        </button>
-                    </div>
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-8 max-w-8xl mx-auto">
+                <div class="bg-white p-8 rounded-lg shadow-lg">
+                    <h2 class="text-2xl font-semibold mb-4">
+                        <%= internships.intTitle %>
+                    </h2>
+                    <p class="text-gray-700 mb-4">
+                        <%= internships.intDescription %>
+                    </p>
+                    <p class="text-gray-700 mb-2"><strong>Requirements:</strong>
+                        <%= internships.intRequirements %>
+                    </p>
+                    <p class="text-gray-700 mb-2"><strong>Stipend:</strong>
+                        <%= internships.intStipend %>k per Month
+                    </p>
+                    <p class="text-gray-700 mb-2"><strong>Duration:</strong>
+                        <%= internships.intDuration %> months
+                    </p>
+                    <p class="text-gray-700 mb-2"><strong>Experience:</strong>
+                        <%= internships.intExperience %> years
+                    </p>
+                    <p class="text-gray-700 mb-2"><strong>Positions:</strong>
+                        <%= internships.intPositions %>
+                    </p>
+                    <p class="text-gray-700 mb-4"><strong>Company:</strong>
+                        <%= internships.intCompany %>
+                    </p>
+                    <button id="applyButton"
+                        class="bg-yellow-400 hover:bg-yellow-500 text-blue-800 font-bold py-2 px-6 rounded-full transition-all duration-300 hover:shadow-lg">
+                        Apply Now
+                    </button>
                 </div>
             </div>
         </div>
-
+        </div>
 
         <!-- Toast Message (hidden by default with Tailwind) - Now positioned in top-right corner -->
         <div id="toast"
@@ -267,6 +167,10 @@
         <%- include('layout/footer.ejs') %>
 
             <script>
+                document.getElementById('mobile-menu').addEventListener('click', function () {
+                    document.getElementById('dropdown-menu').classList.toggle('hidden');
+                });
+
                 document.addEventListener('DOMContentLoaded', function () {
                     const applyButton = document.getElementById('applyButton');
                     const toast = document.getElementById('toast');
