--- a/admin-server/views/applicantlist.ejs
+++ b/admin-server/views/applicantlist.ejs
@@ -7,39 +7,37 @@
             <table class="min-w-full">
                 <thead class="bg-gray-50">
                     <tr>
-                        <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Name
-                        </th>
-                        <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Email
-                        </th>
-                        <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                            Resume</th>
+                        <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Name</th>
+                        <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Email</th>
+                        <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Resume</th>
                     </tr>
                 </thead>
                 <tbody class="divide-y divide-gray-200">
-                    <% applications.forEach(applicant=> { %>
-                        <tr class="hover:bg-gray-50">
-                            <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">
-                                <%= applicant.name %>
-                            </td>
-                            <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
-                                <%= applicant.email %>
-                            </td>
-                            <td class="px-6 py-4 whitespace-nowrap text-sm">
-                                <a href="<%= applicant.resume %>" class="text-blue-600 hover:text-blue-900">View
-                                    Resume</a>
-                            </td>
-                        </tr>
-                        <% }) %>
+                    <tr>
+                        <td class="px-6 py-4 whitespace-nowrap">Sarvjeet Swanshi</td>
+                        <td class="px-6 py-4 whitespace-nowrap">sarvjeetswanshi@gmail.com</td>
+                        <td class="px-6 py-4 whitespace-nowrap text-blue-500">
+                            Download
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="px-6 py-4 whitespace-nowrap">Anuj Rathore</td>
+                        <td class="px-6 py-4 whitespace-nowrap">anuj@gmail.com</td>
+                        <td class="px-6 py-4 whitespace-nowrap text-blue-500">
+                            Download
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="px-6 py-4 whitespace-nowrap">Saurav Roy</td>
+                        <td class="px-6 py-4 whitespace-nowrap">sauravroy@gmail.com</td>
+                        <td class="px-6 py-4 whitespace-nowrap text-blue-500">
+                            Download
+                        </td>
+                    </tr>
                 </tbody>
             </table>
-
-            <% if (applications.length===0) { %>
-                <div class="py-4 px-6 text-center text-gray-500">
-                    No applicants found
-                </div>
-                <% } %>
         </div>
         <div class="mt-48"></div>
     </div>
 
-    <%- include('layout/footer') %>
+<%- include('layout/footer') %>
